--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,19 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Welcome to our test
+
+  //Wrapper
+  #wrapper
+
+    //User List
+    h2 User List
+    #userList
+      table
+        thead
+          th UserName
+          th Email
+          th Delete?
+        tbody
+    // /User List
+  // /Wrapper
