Added get users functionality and user detail using AJAX

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,20 +1,37 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to our test
+    h1= title
+    p Welcome to our test
 
-  //Wrapper
-  #wrapper
+    //Wrapper
+    #wrapper
 
-    //User List
-    h2 User List
-    #userList
-      table
-        thead
-          th UserName
-          th Email
-          th Delete?
-        tbody
-    // /User List
-  // /Wrapper
+        // User info
+        #userInfo
+            h2 User Info
+            p
+                strong Name:
+                |   <span id='userInfoName'></span>
+                br
+                strong Age:
+                |   <span id='userInfoAge'></span>
+                br
+                strong Gender:
+                |   <span id='userInfoGender'></span>
+                br
+                strong Location:
+                |   <span id='userInfoLocation'></span>
+        // /User Info
+
+        //User List
+        h2 User List
+        #userList
+            table
+                thead
+                    th UserName
+                    th Email
+                    th Delete?
+                tbody
+        // /User List
+    // /Wrapper
