--- a/views/index.jade
+++ b/views/index.jade
@@ -34,4 +34,20 @@ block content
                     th Delete?
                 tbody
         // /User List
+
+        // Add User
+        h2 Add User
+        #addUser
+            fieldset
+                input#inputUserName(type='text', placeholder='User Name')
+                input#inputUserEmail(type='text', placeholder='Email')
+                br
+                input#inputUserFullname(type='text', placeholder='Full Name')
+                input#inputUserAge(type='text', placeholder='Age')
+                br
+                input#inputUserLocation(type='text', placeholder='Location')
+                input#inputUserGender(type='text',  placeholder='Gender')
+                br
+                button#btnAddUser Add User
+        // /Add User
     // /Wrapper
