--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -52,6 +52,10 @@ a {
   background:rgba(80,120,255,0.05);
 }
 
+#btnUpdateUser {
+  display: none;
+}
+
 fieldset {
   border:0;
   padding:0; margin:0;
